# U-Net

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  main.ipynb  main.py  pyproject.toml  requirements.txt
config/: config.yaml
config/experiment/: baseline.yaml
config/model/: unet.yaml
config/training/: default.yaml
config/transforms/: medium.yaml
configs/: config.yaml
lightning_logs/version_0/: events.out.tfevents.1774960758.e09b14c00f38.1472.0  hparams.yaml
lightning_logs/version_1/: events.out.tfevents.1774961177.72506ba41e7e.1896.0  hparams.yaml
lightning_logs/version_2/: events.out.tfevents.1776509843.369ad4e030fa.29531.0  hparams.yaml
modules/: config.py  data.py  loss.py  model.py  train.py  utils.py
modules/models/: unet.py
outputs/2026-04-17/14-46-56/.hydra/: hydra.yaml
outputs/2026-04-17/18-33-29/.hydra/: config.yaml  hydra.yaml
outputs/2026-04-17/18-38-28/.hydra/: hydra.yaml
outputs/2026-04-17/18-47-10/.hydra/: config.yaml  hydra.yaml
outputs/2026-04-17/18-52-08/.hydra/: config.yaml  hydra.yaml
outputs/2026-04-17/18-59-56/.hydra/: config.yaml  hydra.yaml
outputs/2026-04-17/19-07-57/.hydra/: config.yaml  hydra.yaml
outputs/2026-04-17/19-35-40/.hydra/: hydra.yaml
outputs/2026-04-17/20-25-57/.hydra/: hydra.yaml
outputs/2026-04-18/08-34-13/.hydra/: config.yaml  hydra.yaml
outputs/2026-04-18/10-22-17/.hydra/: config.yaml  hydra.yaml
unet_segmentation.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
